--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.6.0
 backports.zoneinfo==0.2.1
 cloudinary==1.31.0
+dj-rest-auth==2.2.7
 Django==4.1.5
 django-cloudinary-storage==0.3.0
 django-filter==22.1
